Fix img in card section & info-card gap

--- a/style.css
+++ b/style.css
@@ -491,6 +491,7 @@ button {
 
   #container-card {
     align-content: center;
+    padding: 2%;
   }
 
   .thumbnail .item-1 {
@@ -517,7 +518,7 @@ button {
 
   .card1 p {
     font-size: 0.7em;
-    margin: 0 10% 0 0;
+    margin: 0 10% 0 2%;
   }
 
   .languages {
@@ -687,7 +688,8 @@ button {
   .info-card {
     margin: 0 10% 0 5%;
     font-size: 0.5em;
-    width: 50%;
+    align-content: space-around;
+    width: 45%;
   }
 
   .languages {
